--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: bash
 
+dist: bionic
+
 env:
   - BUILDX_VERSION=0.4.2 DOCKER_VERSION=test
   - BUILDX_VERSION=0.4.2 DOCKER_VERSION=stable
@@ -13,15 +15,24 @@ env:
   - BUILDX_VERSION=0.3.1 DOCKER_VERSION=test
   - BUILDX_VERSION=0.3.1 DOCKER_VERSION=stable
   - BUILDX_VERSION=0.3.1 DOCKER_VERSION=19.03
+  - DOCKER_CLI_EXPERIMENTAL=enabled
 
-services:
-  - docker
+before_install:
+  - sudo rm -rf /var/lib/apt/lists/*
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - lsb_release -cs
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) edge"
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+  - docker context create something
+  - docker run --rm --privileged multiarch/qemu-user-static:register --reset
 
 branches:
   only:
     - master
 
 script:
-  - docker build --build-arg BUILDX_VERSION=$BUILDX_VERSION --build-arg DOCKER_VERSION=$DOCKER_VERSION -t jdrouet/docker-with-buildx:$DOCKER_VERSION-$BUILDX_VERSION .
+  - docker buildx create --use --name buildx-builder something
+  - docker buildx inspect --bootstrap
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push jdrouet/docker-with-buildx:$DOCKER_VERSION-$BUILDX_VERSION
+  - docker buildx build --platform linux/amd64,linux/arm/v7 --push --build-arg BUILDX_VERSION=$BUILDX_VERSION --build-arg DOCKER_VERSION=$DOCKER_VERSION -t jdrouet/docker-with-buildx:$DOCKER_VERSION-$BUILDX_VERSION .
