--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,17 @@ before_install:
   - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) edge"
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+  - export ARCH=$(uname -m)
+  - case $ARCH in
+      armv6*) ARCH="arm-v6";;
+      armv7*) ARCH="arm-v7";;
+      aarch64) ARCH="arm64";;
+      x86_64) ARCH="amd64";;
+    esac
+  - curl -L --output /docker-buildx "https://github.com/docker/buildx/releases/download/v${BUILDX_VERSION}/buildx-v${BUILDX_VERSION}.linux-${ARCH}"
+  - chmod a+x /docker-buildx
+  - mkdir -p /usr/lib/docker/cli-plugins
+  - cp /docker-buildx /usr/lib/docker/cli-plugins/docker-buildx
   - docker context create something
   - docker run --rm --privileged multiarch/qemu-user-static:register --reset
 
