--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,10 @@ before_install:
       aarch64) ARCH="arm64";;
       x86_64) ARCH="amd64";;
     esac
-  - curl -L --output /docker-buildx "https://github.com/docker/buildx/releases/download/v${BUILDX_VERSION}/buildx-v${BUILDX_VERSION}.linux-${ARCH}"
-  - chmod a+x /docker-buildx
+  - curl -L --output docker-buildx "https://github.com/docker/buildx/releases/download/v${BUILDX_VERSION}/buildx-v${BUILDX_VERSION}.linux-${ARCH}"
+  - chmod a+x docker-buildx
   - mkdir -p /usr/lib/docker/cli-plugins
-  - cp /docker-buildx /usr/lib/docker/cli-plugins/docker-buildx
+  - cp docker-buildx /usr/lib/docker/cli-plugins/docker-buildx
   - docker context create something
   - docker run --rm --privileged multiarch/qemu-user-static:register --reset
 
